--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
-  <title>Russian Travel</title>
+  <title>Путешествия по России</title>
 </head>
 
 <body>
@@ -14,7 +13,7 @@
         <header class="header">
             <div class="header__logo"></div>
             <div class="header__links">
-                <a href="./index.html" class="header__lang-link">Ru</a>
+                <a href="./index.html" class="header__lang-link_ru">Ru</a>
                 <a href="#" class="header__lang-link">En</a>
             </div>         
         </header>
@@ -22,23 +21,21 @@
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь</p>
-                <img class="lead__image" src="./images/lead-polka.jpg" alt="картинка">
+                <img class="lead__image" src="./images/lead-polka.jpg" alt="Полка в поезде">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
-            <div class="container">
-                <section class="intro">
+            <section class="intro">
                     <h2 class="intro__title">Чего мы там не видели?</h2>
                     <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
                     <ul class="intro__list">
-                        <li>Часовых поясов 11</li>
-                        <li>Объектов природного наследия ЮНЕСКО 12</li>
-                        <li>Объектов культурного наследия ЮНЕСКО 16 </li>
-                        <li>Природных заповедников 105</li>
-                        <li>Аэропортов 241</li>
+                        <li>Часовых поясов <span class="intro__span-accent">11</span></li>
+                        <li>Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span></li>
+                        <li>Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span></li>
+                        <li>Природных заповедников <span class="intro__span-accent">105</span></li>
+                        <li>Аэропортов <span class="intro__span-accent">241</span></li>
                     </ul>
-                </section>
-            </div>
-            <div class="photo-grid">
+            </section>
+            <section class="photo-grid">
                 <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Из окна поезда">
                 <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Атарва тулси">
                 <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман">
@@ -51,13 +48,13 @@
                 <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="На Камчатке">
                 <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="На Байкале">
                 <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
-            </div>
+            </section>
             <section class="places">
                 <div class="place">
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
-                        <p class="place__website place__website_url-heading">URL</p>
-                        <a class="place__website place__website_link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+                        <p class="place__website_url-heading">URL</p>
+                        <a class="place__website_link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                     </div>
                     <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
                     <div> 
@@ -68,8 +65,8 @@
                 <div class="place">
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
-                        <p class="place__website place__website_url-heading">URL</p>
-                        <a class="place__website place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+                        <p class="place__website_url-heading">URL</p>
+                        <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
                     </div>
                     <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский полуостров">
                     <div>
@@ -81,8 +78,8 @@
                     <h2 class="place__title">Алтай</h2>
                     <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
                     <div class="place__website">
-                        <p class="place__website place__website_url-heading">URL</p>
-                        <a class="place__website place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
+                        <p class="place__website_url-heading">URL</p>
+                        <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
                     </div>
                     <div>
                         <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -92,8 +89,8 @@
                 <div class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
-                        <p class="place__website place__website_url-heading">URL</p>
-                        <a class="place__website place__website_link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+                        <p class="place__website_url-heading">URL</p>
+                        <a class="place__website_link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                     </div>
                     <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
                     <div>               
@@ -104,8 +101,8 @@
                 <div class="place">
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
-                        <p class="place__website place__website_url-heading">URL</p>
-                        <a class="place__website place__website_link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+                        <p class="place__website_url-heading">URL</p>
+                        <a class="place__website_link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                     </div>
                     <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
                     <div>
@@ -116,16 +113,16 @@
             </section>
             <section class="cover">
                 <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-                    <h2 class="cover__title">До Байкала «на собаках»</h2>
+                    <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>                </a>
             </section>
         </main>        
         <footer class="footer">
-            <a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a>
-            <a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a>
-            <a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a>
-            <a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a>
-            <a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a>
+            <nav href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</nav>
+            <nav href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</nav>
+            <nav href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</nav>
+            <nav href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</nav>
+            <nav href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</nav>
             <a class="footer__copyright">&copy; 2020 Артем Киракосян</a>
         </footer>
     </div>
