--- a/index.html
+++ b/index.html
@@ -118,11 +118,21 @@
             </section>
         </main>        
         <footer class="footer">
-            <nav href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</nav>
-            <nav href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</nav>
-            <nav href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</nav>
-            <nav href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</nav>
-            <nav href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</nav>
+            <nav>
+                <a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a>
+            </nav>
+            <nav>
+                <a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a>
+            </nav>
+            <nav>
+                <a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a>
+            </nav>
+            <nav>
+                <a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a>
+            </nav>
+            <nav>
+                <a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a>
+            </nav>
             <a class="footer__copyright">&copy; 2020 Артем Киракосян</a>
         </footer>
     </div>
