--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <div class="place">
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
-                        <p class="place__website_url-heading">URL</p>
-                        <a class="place__website_link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+                        <p class="place__url-heading">URL</p>
+                        <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                     </div>
                     <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
                     <div> 
@@ -65,8 +65,8 @@
                 <div class="place">
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
-                        <p class="place__website_url-heading">URL</p>
-                        <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+                        <p class="place__url-heading">URL</p>
+                        <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
                     </div>
                     <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский полуостров">
                     <div>
@@ -78,8 +78,8 @@
                     <h2 class="place__title">Алтай</h2>
                     <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
                     <div class="place__website">
-                        <p class="place__website_url-heading">URL</p>
-                        <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
+                        <p class="place__url-heading">URL</p>
+                        <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
                     </div>
                     <div>
                         <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -89,8 +89,8 @@
                 <div class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
-                        <p class="place__website_url-heading">URL</p>
-                        <a class="place__website_link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+                        <p class="place__url-heading">URL</p>
+                        <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                     </div>
                     <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
                     <div>               
@@ -101,8 +101,8 @@
                 <div class="place">
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
-                        <p class="place__website_url-heading">URL</p>
-                        <a class="place__website_link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+                        <p class="place__url-heading">URL</p>
+                        <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                     </div>
                     <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
                     <div>
