--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <header class="header">
             <div class="header__logo"></div>
             <div class="header__links">
-                <a href="./index.html" class="header__lang-link_active">Ru</a>
-                <a href="#" class="header__lang-link">En</a>
+                <a href="./index.html" class="header__link_active">Ru</a>
+                <a href="#" class="header__link">En</a>
             </div>         
         </header>
         <main class="content">
