--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="header">
             <div class="header__logo"></div>
             <div class="header__links">
-                <a href="./index.html" class="header__link_active">Ru</a>
+                <a href="./index.html" class="header__link header__link_active">Ru</a>
                 <a href="#" class="header__link">En</a>
             </div>         
         </header>
