--- a/index.html
+++ b/index.html
@@ -118,19 +118,11 @@
             </section>
         </main>        
         <footer class="footer">
-            <nav>
-                <a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a>
-            </nav>
-            <nav>
-                <a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a>
-            </nav>
-            <nav>
-                <a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a>
-            </nav>
-            <nav>
-                <a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a>
-            </nav>
-            <nav>
+            <nav class="footer__links">
+                <a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a>            
+                <a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a>            
+                <a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a>            
+                <a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a>            
                 <a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a>
             </nav>
             <a class="footer__copyright">&copy; 2020 Артем Киракосян</a>
